add modules to jlink (http/crypto)